crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_views_list__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "uri": "<WS>/examples/the-book-corpus/coffee-machine/views.sysml"
  },
  "response": [
    {
      "exposed": [],
      "filters": [
        "<UUID>"
      ],
      "id": "<UUID>",
      "kind": "ViewDefinition",
      "name": "RequirementsTraceView",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 2924,
        "file":"<FILE>",
        "line": 62,
        "start": 2618
      }
    },
    {
      "exposed": [],
      "filters": [
        "<UUID>"
      ],
      "id": "<UUID>",
      "kind": "ViewDefinition",
      "name": "SafetyReviewView",
      "renderings": [
        {
          "id": "<UUID>",
          "name": "safetyStyle"
        }
      ],
      "source_span": {
        "col": 4,
        "end": 5554,
        "file":"<FILE>",
        "line": 89,
        "start": 5114
      }
    },
    {
      "exposed": [],
      "filters": [
        "<UUID>"
      ],
      "id": "<UUID>",
      "kind": "ViewDefinition",
      "name": "StructuralOverviewView",
      "renderings": [
        {
          "id": "<UUID>",
          "name": "structuralStyle"
        }
      ],
      "source_span": {
        "col": 4,
        "end": 4664,
        "file":"<FILE>",
        "line": 75,
        "start": 4445
      }
    },
    {
      "exposed": [],
      "filters": [
        "<UUID>"
      ],
      "id": "<UUID>",
      "kind": "ViewDefinition",
      "name": "VerificationDashboardView",
      "renderings": [
        {
          "id": "<UUID>",
          "name": "dashboardStyle"
        }
      ],
      "source_span": {
        "col": 4,
        "end": 6280,
        "file":"<FILE>",
        "line": 107,
        "start": 5948
      }
    },
    {
      "exposed": [],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewDefinition",
      "name": "BrewSequenceView",
      "renderings": [
        {
          "id": "<UUID>",
          "name": "brewStyle"
        }
      ],
      "source_span": {
        "col": 4,
        "end": 6740,
        "file":"<FILE>",
        "line": 123,
        "start": 6602
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": false,
          "qualified_name": "Actions::BrewCycle"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "brewSequence",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 6825,
        "file":"<FILE>",
        "line": 127,
        "start": 6746
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": false,
          "qualified_name": "CoffeeMachine"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "structuralOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 4805,
        "file":"<FILE>",
        "line": 80,
        "start": 4670
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": false,
          "qualified_name": "CoffeeMachine::brewer"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "scratch",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 7189,
        "file":"<FILE>",
        "line": 135,
        "start": 7084
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": false,
          "qualified_name": "Connections::ConnectedCoffeeMachine"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "connectionOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 1527,
        "file":"<FILE>",
        "line": 33,
        "start": 1397
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": false,
          "qualified_name": "States::CoffeeMachineLifecycle"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "lifecycleStates",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 2087,
        "file":"<FILE>",
        "line": 48,
        "start": 1965
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Actions"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "actionFlows",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 1883,
        "file":"<FILE>",
        "line": 43,
        "start": 1790
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Actions"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "actionsOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 1701,
        "file":"<FILE>",
        "line": 38,
        "start": 1607
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Calculations"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "calculationsOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 2270,
        "file":"<FILE>",
        "line": 53,
        "start": 2166
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "CoffeeMachineDomain"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "packageTree",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 1147,
        "file":"<FILE>",
        "line": 23,
        "start": 1045
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "CoffeeMachineMetadata"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "metadataOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 3798,
        "file":"<FILE>",
        "line": 92,
        "start": 3689
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Definitions"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "definitionsOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 978,
        "file":"<FILE>",
        "line": 18,
        "start": 876
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Ports"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "portsOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 1307,
        "file":"<FILE>",
        "line": 28,
        "start": 1217
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Requirements"
        },
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Verification"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "requirementsGrid",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 3251,
        "file":"<FILE>",
        "line": 76,
        "start": 3122
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Requirements"
        },
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Verification"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "requirementsTrace",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 3048,
        "file":"<FILE>",
        "line": 70,
        "start": 2930
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Requirements"
        },
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Verification"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "verificationDashboard",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 6459,
        "file":"<FILE>",
        "line": 115,
        "start": 6286
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Requirements"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "safetyReview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 5679,
        "file":"<FILE>",
        "line": 98,
        "start": 5560
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "TypingAndSpecialization"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "specializationOverview",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 3432,
        "file":"<FILE>",
        "line": 82,
        "start": 3315
      }
    },
    {
      "exposed": [
        {
          "exposed_element_id": "<UUID>",
          "id": "<UUID>",
          "is_namespace": true,
          "qualified_name": "Views"
        }
      ],
      "filters": [],
      "id": "<UUID>",
      "kind": "ViewUsage",
      "name": "viewsTree",
      "renderings": [],
      "source_span": {
        "col": 4,
        "end": 3603,
        "file":"<FILE>",
        "line": 87,
        "start": 3517
      }
    }
  ]
}
